* READMEを追記 * ビルド環境の調整 * REMDMEをトップに集約